# Snowflakes

./: .gitignore  CMakeLists.txt  README.md  compile_and_run.sh  compile_and_test.sh
apps/: CMakeLists.txt  app.cpp
docs/: CMakeLists.txt
include/coordinate/: coordinatelib.hpp  generatorlib.hpp  vectorlib.hpp
include/graph/: graphlib.hpp
include/helper/: consolelib.hpp  fmtlib.hpp
include/math/: mathlib.hpp
src/: CMakeLists.txt  coordinatelib.cpp  fmtlib.cpp  generatorlib.cpp  graphlib.cpp  mathlib.cpp  vectorlib.cpp
tests/: CMakeLists.txt  testCoordinatelib.cpp  testHelperlib.cpp  testlib.cpp
